pkg/lang/testdata/ub/inputs/invalid/default-composite-bare.ub
inputs: {
  protos: { type: list(string), default: [tcp] }
}
